# PolyVoxCord

./: .env.example  .env.sample  .gitignore  CLAUDE.md  LICENSE  PolyVoxCord.code-workspace  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  バグレポート.md  機能リクエスト.md
app/: init_comands.py  init_db.py  main.py  main1.py  test.py
app/base/: bot.py
app/cogs/: base_cog.py  connection.py  guide.py  guild_setting.py  ops.py  read.py  reset.py  setting.py  task.py  user_setting.py
app/common/: args.py  assign_kana.py  csv.py  db_setting.py  model_entity_converter.py  setting.py  text_format.py  ui.py  user_message.py
app/config/: db.py  discord.py  mecab.py  voice.py  voice_model.py
app/data/: ReadLimit.csv  ReadLimt.csv  VoiceModel.csv
app/data_model/: base_model.py  database.py  read_limit.py  test.py  voice_model.py  voice_setting_model.py
app/entity/: guild_voice_setting_entity.py  read_limit_entity.py  reading_dict_entity.py  voice_setting_entity.py
app/model/: __init__.py  base_model.py  guild_voice_setting.py  read_limit.py  reading_dict.py  voice_setting.py  voice_setting_model.py
app/repository/: guild_voice_setting_repository.py  read_limit_repository.py  reading_dict_repository.py  voice_setting_repository.py
app/service/: connection_service.py  guide_service.py  guild_voice_setting_service.py  make_voice_service.py  presence_service.py  read_limit.py  read_limit_service.py  read_service.py  reading_dict_service.py  task_service.py  voice_setting_service.py
app/voice_model/: meta_voice_model.py  sof_talk.py  (+3 more)
